# sheepdog

./: .codacy.yml  .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  .secinclude  .secrets.baseline  .travis.yml  Dockerfile  Jenkinsfile  README.md  TestDockerfile  azure-devops-pipeline.yaml  build_openapi.py  coverage.xml  dev-requirements.txt  dockerrun.bash  pyproject.toml  pytest.ini  requirements.txt  run.py  run_tests.bash  sample-usage.py  sample_usage.py  setup.py  wsgi.py
.github/: labeler.yml
.github/workflows/: ci.yaml  integration_tests.yaml  labeler.yml  wool.yaml
deployment/nginx/: nginx.conf  uwsgi.conf
deployment/scripts/postgresql/: postgresql_test_init.sql
deployment/uwsgi/: uwsgi.ini
deployment/wsgi/: gunicorn.conf.py  wsgi.py
docs/: Makefile  _config.yml  azure_devops_pipeline.md  conf.py  contents.rst  index.html  index.rst  local_dev_environment.md  openapi.yaml
docs/api_reference/: index.rst  sheepdog.auth.rst  sheepdog.blueprint.rst  sheepdog.dictionary.rst  sheepdog.errors.rst  sheepdog.globals.rst  sheepdog.models.rst  sheepdog.rst  sheepdog.transactions.rst  sheepdog.utils.rst  substitutions.rst
docs/entities/: index.rst
docs/requests/: index.rst
integration_tests/: conftest.py
integration_tests/submission/: test_admin_endpoints.py  test_endpoints.py
openapi/: README.md  app_info.py  definitions.py  docstring_parser.py  swagger.yml
sheepdog/: __init__.py  api.py  api_.py  asgi.py  config.py  dev_settings.py  dictionary.py  errors.py  globals.py  main.py  models.py  sanity_checks.py  test_settings.py  version_data.py
sheepdog/auth/: __init__.py  auth_driver.py  federated_user.py
sheepdog/blueprint/: __init__.py
sheepdog/blueprint/routes/: __init__.py
sheepdog/blueprint/routes/views/: __init__.py  release.py
sheepdog/blueprint/routes/views/program/: __init__.py  project.py
sheepdog/routes/: system.py
sheepdog/transactions/: __init__.py  constants.py  entity_base.py  transaction_base.py
sheepdog/transactions/close/: __init__.py
sheepdog/transactions/deletion/: __init__.py  entity.py  transaction.py
sheepdog/transactions/release/: __init__.py  transaction.py
sheepdog/transactions/review/: __init__.py  transaction.py
sheepdog/transactions/submission/: __init__.py  entity.py  transaction.py
sheepdog/transactions/upload/: __init__.py  entity.py  entity_factory.py  sub_entities.py  transaction.py
sheepdog/utils/: __init__.py  manifest.py  parse.py  s3.py  scheduling.py  versioning.py
sheepdog/utils/transforms/: __init__.py  bcr_xml_to_json.py  graph_to_doc.py
sheepdog/xml/: __init__.py
sheepdog/xml/evaluators/: __init__.py  fields.py  nodes.py
stress_testing/: expansion.py  sd_stress.ipynb
tests/: api.py  auth_mock.py  ci_commands_script.sh  ci_setup.sh  conftest.py  pytest.ini  test_versioning_util.py  utils.py
tests/integration/: README.md  api.py  conftest.py  utils.py
tests/integration/datadict/: api.py  conftest.py  test_ssl_and_isolation_level.py  test_vacuous.py
tests/integration/datadict/schemas/: dictionary.json
tests/integration/datadict/submission/: test_admin_endpoints.py  test_bcr_xml_to_json.py  test_endpoints.py  test_upload.py  test_upload_signpost.py  utils.py
tests/integration/datadict/submission/data/: case.json  experiment.1.json  experiment.2.json  experimental_metadata.json  experimental_metadata.tsv
tests/integration/datadictwithobjid/: api.py  conftest.py  test_ssl_and_isolation_level.py  utils.py
tests/integration/datadictwithobjid/schemas/: dictionary.json
tests/integration/datadictwithobjid/submission/: test_endpoints.py  test_upload.py  utils.py
tests/integration/datadictwithobjid/submission/data/: case.json  experimental_metadata.json  experimental_metadata.tsv  experimental_metadata_bad_link.tsv  test_submit_tsv_array_type.tsv
tests/integration/schemas/: dictionary.json
tests/integration/submission/: test_admin_endpoints.py  test_endpoints.py  test_upload.py  test_versioning.py  utils.py
tests/integration/submission/data/: aligned_reads_index.json  submitted_aligned_reads.json  submitted_unaligned_reads_new.json
tests/release/: test_release_endpoints.py  test_release_transaction.py
tests/submission/: test_admin_endpoints.py  test_bcr_xml_to_json.py  test_endpoints.py  test_load_dictionary.py  test_submission.py  test_upload.py  test_upload_signpost.py  test_versioning.py  utils.py
tests/submission/data/: dump.json  multi_sample.json  open_file.json  test_s3dictionary.py
tests/unit/: test_authz.py  test_templates.py
tests/unit/submission/: test_array_type_tsv.py  test_bcr_xml_to_json.py  test_utils.py
tests/unit/submission/data/: experimental_metadata.tsv
tests/unit/xml/: conftest.py  test_field_evaluators.py  test_node_evaluators.py
tests/unit/xml/data/: clinical_sample_1.xml  clinical_sample_2.xml
